# dbt6

./: .gitignore  Makefile.am  QuickStart  configure.ac
doc/: Makefile.am  README.txt  dbt6-user.tex
examples/mysql/: dbt6_mysql_profile
examples/pgsql/: dbt6_pgsql_profile
queries/: q1_3.sql  q2_2.sql  q3_1.sql  q3_3.sql  q3_4.sql  q4_1.sql  q4_2.sql  q4_3.sql
scripts/: Makefile.am  dbt3-post-process  dbt3-run-workload  dbt3_profile.in  dbt6-compare-results  dbt6-composite-score  dbt6-gen-report  dbt6-get-config  dbt6-plot-results  dbt6-post-process  dbt6-power-score  dbt6-power-test  dbt6-run-workload  dbt6-sysstats  dbt6-throughput-score  dbt6-throughput-stream  dbt6-throughput-stream-wrapper  dbt6-throughput-test  gen_data.sh
scripts/mysql/: Makefile.am  dbt6-mysql-create-db  dbt6-mysql-load-test  dbt6-mysql-start-db
scripts/pgsql/: Makefile.am  dbt3-pgsql-create-indexes  dbt3-pgsql-create-tables  dbt3-pgsql-drop-tables  dbt3-pgsql-load-data  dbt3-pgsql-load-test  dbt3-pgsql-power-test  dbt6-pgsql-create-db  dbt6-pgsql-create-tables  dbt6-pgsql-drop-tables  dbt6-pgsql-load-data  dbt6-pgsql-load-test  dbt6-pgsql-rf1  dbt6-pgsql-rf2  dbt6-pgsql-start-db
src/dbgen/: Makefile.am  build.c  driver.c  dss.h  dsstypes.h  load_stub.c  print.c  qgen.c  rnd.c  rnd.h  shared.h  speed_seed.c  tpcd.h  varsub.c
