#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2005 Mark Wong & Open Source Development Labs, Inc.
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = doc scripts src

EXTRA_DIST = \
             doc/Makefile \
             doc/dbt6-architecture.sxw \
             doc/dbt6-implement.sxw \
             doc/dbt6-tpch.sxw \
             doc/dbt6-user.tex \
             doc/dbt6-user.pdf \
             doc/pgsql/dbt6-sizing-pg.sxc \
             doc/pgsql/dbt6-user-manual-pg.sxw \
             queries/pgsql/1.sql \
             queries/pgsql/10.sql \
             queries/pgsql/11.sql \
             queries/pgsql/12.sql \
             queries/pgsql/13.sql \
             queries/pgsql/14.sql \
             queries/pgsql/15.sql \
             queries/pgsql/16.sql \
             queries/pgsql/17.sql \
             queries/pgsql/18.sql \
             queries/pgsql/19.sql \
             queries/pgsql/2.sql \
             queries/pgsql/20.sql \
             queries/pgsql/21.sql \
             queries/pgsql/22.sql \
             queries/pgsql/3.sql \
             queries/pgsql/4.sql \
             queries/pgsql/5.sql \
             queries/pgsql/6.sql \
             queries/pgsql/7.sql \
             queries/pgsql/8.sql \
             queries/pgsql/9.sql \
             queries/mysql/1.sql \
             queries/mysql/10.sql \
             queries/mysql/11.sql \
             queries/mysql/12.sql \
             queries/mysql/13.sql \
             queries/mysql/14.sql \
             queries/mysql/15.sql \
             queries/mysql/16.sql \
             queries/mysql/17.sql \
             queries/mysql/18.sql \
             queries/mysql/19.sql \
             queries/mysql/2.sql \
             queries/mysql/20.sql \
             queries/mysql/21.sql \
             queries/mysql/22.sql \
             queries/mysql/3.sql \
             queries/mysql/4.sql \
             queries/mysql/5.sql \
             queries/mysql/6.sql \
             queries/mysql/7.sql \
             queries/mysql/8.sql \
             queries/mysql/9.sql \
	     queries/mysql/ddl \
             queries/mysql/ddl/part.sql \
             queries/mysql/ddl/region.sql \
             queries/mysql/ddl/customer.sql \
             queries/mysql/ddl/orders.sql \
             queries/mysql/ddl/partsupp.sql \
             queries/mysql/ddl/nation.sql \
             queries/mysql/ddl/supplier.sql \
             queries/mysql/ddl/lineitem.sql \
             queries/mysql/ddl/nitro \
             queries/mysql/ddl/nitro/part.sql \
             queries/mysql/ddl/nitro/region.sql \
             queries/mysql/ddl/nitro/customer.sql \
             queries/mysql/ddl/nitro/orders.sql \
             queries/mysql/ddl/nitro/partsupp.sql \
             queries/mysql/ddl/nitro/nation.sql \
             queries/mysql/ddl/nitro/supplier.sql \
             queries/mysql/ddl/nitro/lineitem.sql \
             scripts/init_seed.sh \
             scripts/vmplot.sh \
             scripts/mysql/get_power.pl \
             scripts/mysql/get-throughput \
             scripts/mysql/graph_query_time.pl
