#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

SUBDIRS = mysql pgsql

bin_SCRIPTS = dbt6-compare-results \
		dbt6-composite-score \
		dbt6-gen-report \
		dbt6-get-config \
		dbt6-plot-results \
		dbt6-post-process \
		dbt6-power-score \
		dbt6-power-test \
		dbt6-run-workload \
		dbt6-sysstats \
		dbt6-throughput-score \
		dbt6-throughput-stream \
		dbt6-throughput-stream-wrapper \
		dbt6-throughput-test
