#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

bin_SCRIPTS = dbt6-mysql-create-db \
		dbt6-mysql-create-tables \
		dbt6-mysql-dbstat \
		dbt6-mysql-drop-db \
		dbt6-mysql-drop-tables \
		dbt6-mysql-get-query-time \
		dbt6-mysql-get-version \
		dbt6-mysql-load-data \
		dbt6-mysql-load-test \
		dbt6-mysql-rf1 \
		dbt6-mysql-rf2 \
		dbt6-mysql-start-db \
		dbt6-mysql-stop-db \
		dbt6-mysql-time-statistics
