#
# This file is released under the terms of the Artistic License.
# Please see the file LICENSE, included in this package, for details.
#
# Copyright (C) 2014      Mark Wong
#               2014      2ndQuadrant, Ltd.
#

AUTOMAKE_OPTIONS = foreign

bin_SCRIPTS = dbt6-pgsql-create-db \
		dbt6-pgsql-create-tables \
		dbt6-pgsql-dbstat \
		dbt6-pgsql-drop-db \
		dbt6-pgsql-drop-tables \
		dbt6-pgsql-get-query-time \
		dbt6-pgsql-get-version \
		dbt6-pgsql-load-data \
		dbt6-pgsql-load-test \
		dbt6-pgsql-plan-disaster \
		dbt6-pgsql-rf1 \
		dbt6-pgsql-rf2 \
		dbt6-pgsql-start-db \
		dbt6-pgsql-stop-db \
		dbt6-pgsql-time-statistics
